# quantms-ptms

./: .gitignore  Ascore.py  PhosphoScoring.py  README.md  ascore.py  environment.yaml  phosphoRS.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
data/: 1.part14.rar  1_lucxor_result.idXML  1_phosphors_result.idXML
docs/: CNAME  README.md  benchmark.md  citations.md
docs/algorithms/: ascore.md  lucxor.md  phosphors.md
onsite/: __init__.py  ascore.py  cli.py  onsitec.py  phospho_scoring.py  phosphors.py  phosphors_scoring.py
onsite/ascore/: __init__.py  ascore.py  cli.py
onsite/lucxor/: README.md  __init__.py  cli.py  config.py  constants.py  core.py  flr.py  globals.py  models.py  parallel.py  peak.py  peptide.py  psm.py  spectrum.py
onsite/phosphors/: __init__.py  cli.py  phosphors.py  phosphors_scoring.py
pyLucXor/: README.md  __init__.py  cli.py  config.py  constants.py  core.py  flr.py  globals.py  models.py  parallel.py  peak.py  peptide.py  spectrum.py
tests/: __init__.py  conftest.py  run_data_tests.py  test_ascore.py  test_cli.py  test_data_files.py  test_imports.py  test_lucxor.py  test_output_validation.py  test_phosphors.py
