[tool.poetry]
name = "onsite"
version = "0.0.1"
description = "onsite: mass spectrometry post-translational localization tool"
authors = ["BigBio Stack"]
license = "MIT"
readme = "README.md"
packages = [{include = "onsite"}]
keywords = ["mass-spectrometry", "proteomics", "phosphorylation", "ptm", "ascore", "phosphors"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
homepage = "https://github.com/bigbio/onsite"
repository = "https://github.com/bigbio/onsite"
documentation = "https://github.com/bigbio/onsite"

[tool.poetry.dependencies]
python = "^3.11"
pyopenms = "^3.4.0"
numpy = "^2.3.2"
scipy = "^1.16.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
flake8 = "^7.0.0"

[tool.poetry.scripts]
phospho-scoring = "PhosphoScoring:main"
lucxor = "onsite.lucxor.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
