[project]
name = "onsite"
version = "0.0.1"
description = "onsite: mass spectrometry post-translational localization tool"
authors = [
    {name = "BigBio Stack"}
]
license = "MIT"
readme = "README.md"
keywords = ["mass-spectrometry", "proteomics", "phosphorylation", "ptm", "ascore", "phosphors"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
requires-python = ">=3.11"
dependencies = [
    "pyopenms>=3.4.0",
    "numpy>=2.3.2",
    "scipy>=1.16.1",
    "click>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/bigbio/onsite"
Repository = "https://github.com/bigbio/onsite"
Documentation = "https://github.com/bigbio/onsite"

[project.scripts]
onsite = "onsite.onsitec:main"
phospho-scoring = "onsite.phospho_scoring:main"
phosphors-scoring = "onsite.phosphors_scoring:main"
lucxor = "onsite.lucxor.cli:main"

[tool.poetry]
packages = [{include = "onsite"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
flake8 = "^7.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
